# utxoIQ

./: .env  .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  docker-compose.tor.yml  docker-compose.yml  package-lock.json  pytest.ini  requirements.txt
data/: README.md
docs/: ADMIN-SETUP.md  BUILD_FIX.md  INTEGRATION_README.md  README.md  WEBSOCKET_INFO.md  api-authentication-quick-reference.md  api-reference-auth.md  authentication-guide.md  bigquery-buffer-management.md  bigquery-hybrid-strategy.md  bigquery-migration-guide.md  bitcoin-core-setup.md  cleanup-summary.md  cloud-run-configuration.md  database-api-documentation.md  database-deployment-guide.md  database-schema.md  directory-structure.md  docker-development.md  find-umbrel-credentials.md  firebase-custom-domains-setup.md  firebase-multi-environment-setup.md  firebase-oauth-configuration.md  firebase-quick-start.md  firebase-setup-guide.md  frontend-api-integration.md  historical-block-processing.md  integration-diagram.md  integration-roadmap.md  integration-summary.md  local-development-setup.md  monitoring-alert-configuration.md  monitoring-best-practices.md  monitoring-custom-dashboards.md  monitoring-distributed-tracing.md  quick-reference.md  (+24 more)
sdks/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
sdks/python/src/utxoiq/: __init__.py  client.py  exceptions.py  models.py
sdks/python/src/utxoiq/resources/: __init__.py  alerts.py  billing.py  chat.py  daily_brief.py  email_preferences.py  feedback.py  insights.py
sdks/python/tests/: __init__.py  test_alerts.py  test_client.py  test_error_handling.py  test_feedback.py  test_insights.py  test_integration.py
(+857 files in other folders)
